--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mitr&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #fd1b9f;
+            background-color:rgb(204, 0, 255);
         }
 
         .content{
@@ -98,7 +98,7 @@
 </head>
 <body>
     <div class = "content">
-        <h1>Control de Inventario</h1>
+        <h1>REGISTRO</h1>
         <form action="login.php" method="POST">
             <label for="username">Usuario: </label>
             <br>
@@ -114,7 +114,7 @@
         <a href="validar.html" class="regis">Ingresar</a>
     </div>
     <div class="footer">
-        <p>Inventario</p>
+        <p>Sistema de Inventario</p>
     </div>
 </body>
 </html>
