--- a/Administrador.html
+++ b/Administrador.html
@@ -44,8 +44,9 @@
                 <div class="col 14">
     
                     <ul class="collection">
-                        <a href="#!" class="collection-item">Crear Usuario</a>
-                        <a href="#!" class="collection-item">Agregar Producto</a>
+                        <a href="CrearUsuarios.html" class="collection-item">Crear Usuario</a>
+                        <a href="validar.html" class="collection-item">Agregar Producto</a>
+                        <a href="index2.html" class="collection-item">Salir</a>
                     </ul>
                 </div>
             </div>
