--- a/Trabajador.html
+++ b/Trabajador.html
@@ -45,7 +45,7 @@
                 <div class="col 14">
     
                     <ul class="collection">
-                        <a href="#!" class="collection-item">Entrada de producto</a>
+                        <a href="validar.html" class="collection-item">Entrada de producto</a>
                         <a href="#!" class="collection-item">Salida de producto</a>
                         <a href="#!" class="collection-item">Buscar Producto</a>
                         <a href="#!" class="collection-item">Mostrar Producto</a>
@@ -80,6 +80,7 @@
                             <div class="row">
                                 <div class="input-field col s12">
                                     <input class="btn waves-effect waves-light" type="submit" name="action"/>
+                                    <a href="index.html" class="regis">Regresar al Inicio</a>
                                 </div>
                             </div>
                         </form>
