--- a/validar.html
+++ b/validar.html
@@ -186,6 +186,8 @@ head>
                     <input type="number" class="form-control" name="amount" required> </div> <br>
                 <div class="form-button">
                     <button type="submit" class="modify" style="float:right">Agregar Producto</button>
+                    <br>
+                    <a href="index2.html" class="regis">Regresar al Inicio</a>
                     
                 </div>
             </form>
